The core of the app is done, a bit of integration (for testing purpose is done)

--- a/compagnon.html
+++ b/compagnon.html
@@ -19,7 +19,14 @@
   <script src="/Workspace.js"></script>
   <script src="/Ressource.js"></script>
   <script src="/Compagnon.js"></script>
-
+  <script src="/Drawing.js"></script>
+  <script src="/Image.js"></script>
+  <script src="/Video.js"></script>
+  <script src="/Url.js"></script>
+  <script src="/core.min.js"></script>
+  <script src="/DOM.min.js"></script>
+  <script src="/SeedWithSand.js"></script>
+  
   <script type="text/javascript">
   
   var b;
