--- a/compagnon.html
+++ b/compagnon.html
@@ -4,6 +4,7 @@
   <title>Compagnon</title>
   <link rel="stylesheet" href="/style.css"></link>
 </meta>
+<meta name="viewport" content="width=device-width height=device-height" initial-scale=0.5>
 </head>
 <body>
 
