--- a/compagnon.html
+++ b/compagnon.html
@@ -41,14 +41,25 @@
   <script src="/SubtlePicker.js"></script>
 
   <script src="/Canvas.js"></script>
-  
+  <script src="/Case.js"></script>
+
+  <script src="/where.js"></script>
+  <script src="/Rect.js"></script>
+  <script src="/Point.js"></script>
+  <script src="/Seg.js"></script>
+  <script src="/R4.js"></script>
+  <script src="/Ref.js"></script>
+  <script src="/extend.js"></script>
+  <script src="/isArray.js"></script>
+  <script src="/prototypes.js"></script>
+
   <script type="text/javascript">
   
   var b;
 
   sand.require('Compagnon/*','Drawing/*', function (r) {
     //console.log(r)
-    b = new r.Compagnon.Compagnon();
+    b = new r.Compagnon.Compagnon({});
     document.body.appendChild(b.el);
   })
   </script>
