EvEvent,methods and subscriptions are linked / URL can import JPG-JPEG, GIF, PNG, Youtube and Vimeo videos/ Swap method / Global add method / Global delete method/ New item update

--- a/compagnon.html
+++ b/compagnon.html
@@ -4,7 +4,7 @@
   <title>Compagnon</title>
   <link rel="stylesheet" href="/style.css"></link>
 </meta>
-<meta name="viewport" content="width=device-width height=device-height" initial-scale=0.5>
+<meta name="viewport" content="width=device-width height=device-height">
 </head>
 <body>
 
@@ -42,6 +42,8 @@
   <script src="/extend.js"></script>
   <script src="/isArray.js"></script>
   <script src="/prototypes.js"></script>
+
+  <script src="/curry.js"></script>
 
   <script type="text/javascript">
   
