--- a/compagnon.html
+++ b/compagnon.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <title>Compagnon</title>
-  <link rel="stylesheet" href="/style.css"></link>
+  <link rel="stylesheet" href="/tyle.css"></link>
 </meta>
 <meta name="viewport" content="width=device-width height=device-height">
 </head>
