D&D linked to swap

--- a/compagnon.html
+++ b/compagnon.html
@@ -80,7 +80,7 @@
 
   sand.require('Compagnon/*','Drawing/*','core/Array/*', function (r) {
     //console.log(r)
-    b = new r.Compagnon.Compagnon({ "data" : [{ "type" : "video", "legend" : "lol", "link" : "https://www.youtube.com/watch?v=z2exxj4COhU" },{ "type" : "image", "legend" : "yeah", "link" : "http://rodrigonzalez01.files.wordpress.com/2012/02/yeah1.jpg" }]});
+    b = new r.Compagnon.Compagnon({ "data" : [{ "type" : "video", "legend" : "lol", "link" : "http://www.youtube.com/watch?v=1W8hsVvyKt4" },{ "type" : "image", "legend" : "yeah", "link" : "http://rodrigonzalez01.files.wordpress.com/2012/02/yeah1.jpg" }]});
     document.body.appendChild(b.el);
   })
   </script>
